<resources>
    <string name="app_name">MintyMinutes</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="mintyminutes">MintyMinutes</string>
    <string name="full_name">Full Name</string>
</resources>